<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <include layout="@layout/toolbar_confirm"
        android:id="@+id/include" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:padding="@dimen/margin_baseX2"
        android:layout_below="@+id/include"
        android:fillViewport="false">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/civProfileImage"
                    android:layout_margin="@dimen/margin_baseX3"
                    android:src="@drawable/ic_add_image_50dp"
                    android:layout_width="@dimen/add_image_size"
                    android:layout_height="@dimen/add_image_size" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/fn_editText"
                    android:hint="@string/hint_first_name"
                    android:inputType="text"
                    android:background="@color/transparent"
                    android:padding="@dimen/margin_baseX2"
                    android:textColorHint="@color/grey"
                    android:textColor="@color/black_text"
                    android:textSize="@dimen/text_size_s"
                    android:layout_alignTop="@+id/civProfileImage"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_toRightOf="@+id/civProfileImage"
                    android:layout_toEndOf="@+id/civProfileImage" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/ln_editText"
                    android:hint="@string/hint_last_name"
                    android:inputType="text"
                    android:background="@color/transparent"
                    android:padding="@dimen/margin_baseX2"
                    android:textColorHint="@color/grey"
                    android:textColor="@color/black_text"
                    android:textSize="@dimen/text_size_s"
                    android:layout_below="@+id/fn_editText"
                    android:layout_alignLeft="@+id/fn_editText"
                    android:layout_alignStart="@+id/fn_editText" />

            </RelativeLayout>

            <TextView
                android:id="@+id/tvGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColorHint="@color/grey"
                android:hint="@string/hint_gender"
                android:background="@color/transparent"
                android:padding="@dimen/margin_baseX2"
                android:textColor="@color/black_text"
                android:textSize="@dimen/text_size_s"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/city_editText"
                android:hint="@string/hint_city"
                android:inputType="text"
                android:background="@color/transparent"
                android:padding="@dimen/margin_baseX2"
                android:textColorHint="@color/grey"
                android:textColor="@color/black_text"
                android:textSize="@dimen/text_size_s" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/age_editText"
                android:hint="@string/hint_age"
                android:inputType="number"
                android:background="@color/transparent"
                android:padding="@dimen/margin_baseX2"
                android:textColorHint="@color/grey"
                android:textColor="@color/black_text"
                android:textSize="@dimen/text_size_s"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/phone_editText"
                android:hint="@string/hint_phone"
                android:inputType="phone"
                android:background="@color/transparent"
                android:padding="@dimen/margin_baseX2"
                android:textColorHint="@color/grey"
                android:textColor="@color/black_text"
                android:textSize="@dimen/text_size_s" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/salary_editText"
                android:hint="@string/hint_salary"
                android:inputType="number"
                android:background="@color/transparent"
                android:padding="@dimen/margin_baseX2"
                android:textColorHint="@color/grey"
                android:textColor="@color/black_text"
                android:textSize="@dimen/text_size_s" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/email_editText"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:background="@color/transparent"
                android:padding="@dimen/margin_baseX2"
                android:textColorHint="@color/grey"
                android:textColor="@color/black_text"
                android:textSize="@dimen/text_size_s" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:id="@+id/about_editText"
                android:hint="@string/hint_about"
                android:background="@color/transparent"
                android:padding="@dimen/margin_baseX2"
                android:textColorHint="@color/grey"
                android:textColor="@color/black_text"
                android:textSize="@dimen/text_size_s"
                android:layout_marginBottom="10dp" />

        </LinearLayout>

    </ScrollView>


</RelativeLayout>